--- a/notebooks/上傳檔案到 NodeMCU (Upload files to NodeMCU).ipynb
+++ b/notebooks/上傳檔案到 NodeMCU (Upload files to NodeMCU).ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -44,7 +44,7 @@
    "source": [
     "com_port = 'COM12'\n",
     "# com_port = 'COM13'\n",
-    "com_port = 'COM15'\n",
+    "# com_port = 'COM15'\n",
     "# com_port = 'COM16'"
    ]
   },
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -223,12 +223,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Copying node.py\n"
+      "Copying worker.py\n"
      ]
     }
    ],
    "source": [
-    "copy_one_file('..\\\\codes\\\\node', 'node.py')"
+    "copy_one_file('..\\\\codes\\\\node', 'worker.py')"
    ]
   },
   {
