--- a/notebooks/上傳檔案到 NodeMCU (Upload files to NodeMCU).ipynb
+++ b/notebooks/上傳檔案到 NodeMCU (Upload files to NodeMCU).ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -44,7 +44,7 @@
    "source": [
     "com_port = 'COM12'\n",
     "# com_port = 'COM13'\n",
-    "# com_port = 'COM15'\n",
+    "com_port = 'COM15'\n",
     "# com_port = 'COM16'"
    ]
   },
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -223,12 +223,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Copying worker.py\n"
+      "Copying node.py\n"
      ]
     }
    ],
    "source": [
-    "copy_one_file('..\\\\codes\\\\node', 'worker.py')"
+    "copy_one_file('..\\\\codes\\\\node', 'node.py')"
    ]
   },
   {
@@ -361,7 +361,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
